various changes from recent code review
Signed-off-by: Rene Scherer <rene@scherer-online.com>